test/fail/ac/principalundefined.app
//does not exist, and cannot be used as principal for access control

application test

define page root() {
}

section principal

  principal is User with credentials name
